--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viwport" content="width=device-width, initial-scale=1.0" />
-    <title>this is main</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viwport" content="width=device-width, initial-scale=1.0" />
+  <title>this is main</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="slide-feature.css">
+</head>
+
+<body>
+
+<!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
+  <section id="popular-img">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+        <!-- 여기서 JavaScript를 통해 동적으로 이미지가 추가될 것입니다. -->
+        
+    </div>
+
+  </section>
+
+<!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="recommendation.js"></script>
+</body>
+
 </html>
