--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./search.css">
-    <script defer src="./search.js"></script>
+    <link rel="stylesheet" href="./search/search.css">
+    <script defer src="./search/search.js"></script>
     <title>this is main</title>
   </head>
   <body>
