배열문제 및 파일하위카테고리 수정

--- a/index.html
+++ b/index.html
@@ -32,28 +32,41 @@
       </nav>
       <div class="top-menu" id="topnav">
         <div class="search-box">
+          
           <div class="inner">
             <div class="inner-search">
               <input type="text" id="search-input" placeholder="제목, 인물명을 입력하세요">
               <button class="fas fa-search icon-button search-icon"></button>
             </div>
             <button class="closeBtn" onclick="closeNav()">&times;</button>
-            <div id="category-slide" class="swiper-container movies-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide movie">
-                  <img src="./img/movieImg.jpg" alt="movieImg">
-                </div>
-              </div>
-            </div> 
-            <div class="swiper-left">
+
+            <!-- <div class="swiper-left">
               <i class="fa fa-angle-left swiper-icon-left"></i>
             </div>
             <div class="swiper-right">
               <i class="fa fa-angle-right swiper-icon-right"></i>
+            </div> -->
+          </div>
+
+          <div id="category-slide" class="swiper-container movies-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide movie">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+              </div>
             </div>
-          </div>  
+          </div> 
         </div>
       </div>
+      
       </section>
 
   </body>
