slideshow dot commit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-  
+
 
 
 
@@ -58,6 +58,12 @@
 <!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
   <section id="popular-img">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      
+      <div class="carousel-indicators">
+        <!-- JavaScript에서 인디케이터가 여기에 추가될 것입니다. -->
+      </div>
+      
+
       <div class="carousel-inner">
 
         <!-- 여기서 JavaScript를 통해 동적으로 이미지가 추가될 것입니다. -->
