--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
           <svg viewBox="0 0 93 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#FF153C"><path d="M60.674 13.318l4.493 8.996h6.969V1.208h-6.661v8.786a.588.588 0 01-.458.57.598.598 0 01-.666-.307l-4.506-9.049H52.85v21.106h6.692v-8.736a.58.58 0 01.455-.572.579.579 0 01.678.312zM49.852 1.208h-7.316v21.106h7.316V1.208zM74.291 9.764v3.89c0 3.784 1.435 6.52 4.269 8.13 4.517 2.569 11.018.983 13.857-1.11V10.85H85.81v6.177l-.127.049c-.634.245-2.134.51-3.245-.248-.856-.582-1.294-1.626-1.294-3.104v-4.35c0-1.368.616-2.253 1.771-2.553 1.232-.306 2.424.365 2.913 1.638l6.403-3.407C90.203 1.545 86.892.667 84.09.667c-.43 0-.85.021-1.253.055-2.368.21-4.311.973-5.894 2.332-1.682 1.436-2.652 3.882-2.652 6.71zM18.494 1.208H.334v6.178H5.8v14.928h7.225V7.386h5.469V1.208zM33.485 1.208l-4.576 14.124a.573.573 0 01-.653.401.583.583 0 01-.502-.582V1.205h-6.932v21.121h13.119l7.178-21.105-7.634-.013z"></path></g></svg>
         </a>
          <div class="menus">
-        <button>시리즈</button>
         <button>영화</button>
-        <button>라이브</button>
-        <!-- <button>KBO</button> -->
+        <button>인기</button>
+        <button>최신</button>
         </div>
         <div class="navbar_right">
           <button class="fas fa-search icon-button search-icon" onclick="openNav()"></button>
@@ -36,7 +35,7 @@
           <div class="inner">
             <div class="inner-search">
               <input type="text" id="search-input" placeholder="제목, 인물명을 입력하세요">
-              <button class="fas fa-search icon-button search-icon"></button>
+              <button class="fas fa-search icon-button search-open-icon"></button>
             </div>
             <button class="closeBtn" onclick="closeNav()">&times;</button>
 
@@ -48,9 +47,60 @@
             </div> -->
           </div>
 
-          <div id="category-slide" class="swiper-container movies-container">
+          <div id="movie-search-board" class="swiper-container movies-container">
             <div class="swiper-wrapper">
-              <div class="swiper-slide movie">
+              <h2>시리즈</h2>
+              <div class="swiper-slide_1 movie">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+              </div>
+              <h2>인기</h2>
+              <div class="swiper-slide_2 movie">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+              </div>
+                            <h2>시리즈</h2>
+              <div class="swiper-slide_3 movie">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+              </div>
+              <div class="swiper-slide_4 movie">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+                <img src="./img/movieImg.jpg" alt="movieImg">
+              </div>
+              <div class="swiper-slide_5 movie">
                 <img src="./img/movieImg.jpg" alt="movieImg">
                 <img src="./img/movieImg.jpg" alt="movieImg">
                 <img src="./img/movieImg.jpg" alt="movieImg">
