--- a/detail/detail.html
+++ b/detail/detail.html
@@ -42,7 +42,13 @@
         </div>
 
         <div class="right">
-          <img id="moviePoster" src="tving.png" alt="영화 포스터" />
+          <img id="moviePoster" alt="영화 포스터" />
+        </div>
+      </section>
+      <section class="videos">
+        <h2>관련 영상</h2>
+        <div id="videoResults">
+          <!-- 유튜브 비디오 -->
         </div>
       </section>
     </main>
