call popular movie sliding card display commit 07-17-2024

--- a/index.html
+++ b/index.html
@@ -137,9 +137,24 @@
         <!-- 여기서 JavaScript를 통해 동적으로 이미지가 추가될 것입니다. -->
         
     </div>
-
   </section>
+<section>
+  <!--  card 커스턴 슬라이더 기능 구현하기 구역 -->
+<section class="container movie-list-container">  
 
+  
+    <h1 class="movie-list-title">최신영화</h1>
+    <div class="movie-list-wrapper">
+        <i class="fas fa-chevron-left arrow-left"></i>
+        <div class=" movie-list">        
+
+<!-- card 커스텀 JavaScript을 통해 동적으로 이미지 및 슬라이드 실행 영역 -->
+          
+        </div>
+        <i class="fas fa-chevron-right arrow-right"></i>
+    </div>
+
+</section>
 <!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
