arrow button fixed with object commit 07-18-2024 at 4:55 pm

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <h1 class="movie-list-title">인기 영화</h1>
           <div class="movie-list-wrapper">
               <span id="left-arrow-popular" class="arrow-left">&lt;</span>
-              <div class="movie-list">
+              <div class="popular-movie-list">
                   <!-- card 커스텀 JavaScript을 통해 동적으로 이미지 및 슬라이드 실행 영역 -->
               </div>
               <span id="right-arrow-popular" class="arrow-right">&gt;</span>
