--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -31,7 +31,7 @@
         <h1 class="h1">찜 목록</h1>
         <!-- 카테고리 선택, 편집 버튼 -->
         <div class="wishlist-select-area">
-          <div class="wishlist-select-list">
+          <div id="wishlist-category" class="wishlist-select-list">
             <button type="button" class="active">시리즈</button>
             <button type="button">영화</button>
           </div>
