design: 공통 css globalStyle 파일로 분리

--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/globalStyle.css" />
     <link rel="stylesheet" href="/wishlist/wishlist.css" />
   </head>
   <body>
