--- a/index.html
+++ b/index.html
@@ -4,145 +4,82 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NINE MOVIE</title>
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="recommendation/slide-feature.css">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- Swiper -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <!-- icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="./search/search.css" />
+  <link rel="stylesheet" href="recommendation/slide-feature.css" />
+  <title>NINE MOVIE</title>
 </head>
 
 <body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <section class="header">
+    <nav class="container navbar"> <!--  반응형 .container 추가 했습니다 -->
+      <a href="./" class="logo">
+        nine movie
+        <!-- <svg
+            viewBox="0 0 93 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g fill="#FF153C">
+              <path
+                d="M60.674 13.318l4.493 8.996h6.969V1.208h-6.661v8.786a.588.588 0 01-.458.57.598.598 0 01-.666-.307l-4.506-9.049H52.85v21.106h6.692v-8.736a.58.58 0 01.455-.572.579.579 0 01.678.312zM49.852 1.208h-7.316v21.106h7.316V1.208zM74.291 9.764v3.89c0 3.784 1.435 6.52 4.269 8.13 4.517 2.569 11.018.983 13.857-1.11V10.85H85.81v6.177l-.127.049c-.634.245-2.134.51-3.245-.248-.856-.582-1.294-1.626-1.294-3.104v-4.35c0-1.368.616-2.253 1.771-2.553 1.232-.306 2.424.365 2.913 1.638l6.403-3.407C90.203 1.545 86.892.667 84.09.667c-.43 0-.85.021-1.253.055-2.368.21-4.311.973-5.894 2.332-1.682 1.436-2.652 3.882-2.652 6.71zM18.494 1.208H.334v6.178H5.8v14.928h7.225V7.386h5.469V1.208zM33.485 1.208l-4.576 14.124a.573.573 0 01-.653.401.583.583 0 01-.502-.582V1.205h-6.932v21.121h13.119l7.178-21.105-7.634-.013z"
+              ></path>
+            </g>
+          </svg> -->
+      </a>
+      <div class="menus">
+        <button>영화</button>
+        <button>인기</button>
+        <button>최신</button>
+      </div>
+      <div class="navbar_right">
+        <button class="fas fa-search icon-button search-icon" onclick="openNav()"></button>
+        <button class="fa-regular fa-user icon-button user-icon" onclick="getNewsByUser()"></button>
+      </div>
+    </nav>
+    <div class="top-menu" id="topnav">
+      <div class="search-box">
+        <div class="inner">
+          <div class="inner-search">
+            <input type="text" id="search-input" placeholder="제목, 인물명을 입력하세요" />
+            <button onclick="getMoviesByKeyword()" class="fas fa-search icon-button search-open-icon"></button>
+          </div>
+          <button class="closeBtn" onclick="closeNav()">&times;</button>
+        </div>
+        <div id="movie-search-board" class="swiper-container movies-container">
+          <div class="swiper-wrapper"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <main>
+    <div id="initial-movie-board" class="movie-container"></div>
+  </main>
 
   <!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
   <section id="popular-img">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-
       <div class="carousel-indicators">
         <!-- JavaScript에서 인디케이터가 여기에 추가될 것입니다. -->
       </div>
-
-
       <div class="carousel-inner">
-
         <!-- 여기서 JavaScript를 통해 동적으로 이미지가 추가될 것입니다. -->
-
       </div>
+    </div>
   </section>
-  <section class="card-slider-section">
-    <!--  card 커스턴 슬라이더 기능 구현하기 구역 -->
+  <section>
+    <!--  card 커스텀 슬라이더 기능 구현하기 구역 -->
     <div class="container movie-list-container">
       <div>
-        <h1 class="movie-list-title popular-title">인기 영화</h1>
+        <h1 class="movie-list-title">인기 영화</h1>
         <div class="movie-list-wrapper">
           <span id="left-arrow-popular" class="arrow-left">&lt;</span>
           <div class="popular-movie-list">
@@ -151,12 +88,8 @@
           <span id="right-arrow-popular" class="arrow-right">&gt;</span>
         </div>
       </div>
-
-      <!-- </div>
-
-  <div class="container movie-list-container"></div> -->
       <div>
-        <h1 class="movie-list-title now-playing-title">지금 상영 영화</h1>
+        <h1 class="movie-list-title">지금 상영 영화</h1>
         <div class="movie-list-wrapper">
           <span id="left-arrow-now-playing" class="arrow-left">&lt;</span>
           <div class="now-playing-movie-list">
@@ -165,9 +98,8 @@
           <span id="right-arrow-now-playing" class="arrow-right">&gt;</span>
         </div>
       </div>
-
       <div>
-        <h1 class="movie-list-title trending-title">트렌드 영화</h1>
+        <h1 class="movie-list-title">최신 영화</h1>
         <div class="movie-list-wrapper">
           <span id="left-arrow-trending" class="arrow-left">&lt;</span>
           <div class="trending-movie-list">
@@ -178,7 +110,7 @@
       </div>
 
       <div>
-        <h1 class="movie-list-title upcoming-title">개봉예정 영화</h1>
+        <h1 class="movie-list-title">개봉예정 영화</h1>
         <div class="movie-list-wrapper">
           <span id="left-arrow-upcoming" class="arrow-left">&lt;</span>
           <div class="upcoming-movie-list">
@@ -189,7 +121,7 @@
       </div>
 
       <div>
-        <h1 class="movie-list-title topRated-title">높은평점 영화</h1>
+        <h1 class="movie-list-title">높은평점 영화</h1>
         <div class="movie-list-wrapper">
           <span id="left-arrow-topRated" class="arrow-left">&lt;</span>
           <div class="topRated-movie-list">
@@ -198,26 +130,13 @@
           <span id="right-arrow-topRated" class="arrow-right">&gt;</span>
         </div>
       </div>
-
-    </div>
-
-    <!-- toggle -->
-
-    <div class="toggle">
-      <i class="fas fa-moon toggle-icon"></i>
-      <i class="fas fa-sun toggle-icon"></i>
-      <div class="toggle-ball"></div>
-    </div>
-
-    <!-- End toggle -->
-    <!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-    <script src="recommendation/recommendation.js"></script>
-    <script src="recommendation/toggle.js"></script>
-
+  </section>
+  <!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <script src="./search/search.js" defer></script>
+  <script src="recommendation/recommendation.js" defer></script>
 </body>
 
 </html>
