Feature-lhj + feature-sjh second commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <section class="header">
     <nav class="container navbar"> <!--  반응형 .container 추가 했습니다 -->
-      <a href="./" class="logo">
+      <a href="index.html" class="logo">
         nine movie
         <!-- <svg
             viewBox="0 0 93 24"
@@ -60,12 +60,12 @@
       </div>
     </div>
   </section>
-  <main>
+  <main class="main-movie-board">
     <div id="initial-movie-board" class="movie-container"></div>
   </main>
 
   <!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
-  <section id="popular-img">
+  <section id="popular-img-carousel" class="carousel-window" >
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <!-- JavaScript에서 인디케이터가 여기에 추가될 것입니다. -->
@@ -75,7 +75,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="card-castom">
     <!--  card 커스텀 슬라이더 기능 구현하기 구역 -->
     <div class="container movie-list-container">
       <div>
