--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <section class="header">
     <nav class="navbar">
-      <a href="./" class="logo">
+      <a href="index.html" class="logo">
         NINE MOVIE
       </a>
       <div class="menus">
