feat: 찜 목록 편집 모드 추가
- 편집 버튼 클릭 시 편집 모드로 전환
- 전체 선택 시 찜 리스트 전체 선택
- 찜 리스트 선택 시 페이징 처리 제한, 선택 되도록 처리
- 전체 해제 시 찜 리스트 전체 해제
- 찜 리스트 선택 시 선택된 갯수 표시
-  찜 삭제 시 선택된 리스트 삭제 및 UI 반영
- 완료 버튼 클릭 시 편집 모드 완료와 초기화 처리

--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -33,24 +33,19 @@
         <!-- 카테고리 선택, 편집 버튼 -->
         <div class="wishlist-select-area">
           <div id="wishlist-category" class="wishlist-select-list">
-            <button type="button" class="active">시리즈</button>
-            <button type="button">영화</button>
+            <button class="active">시리즈</button>
+            <button>영화</button>
           </div>
-          <div class="wishlist-edit-area">
-            <button
-              type="button"
-              id="wishlist-edit-button"
-              class="wishlist-select-button"
-            >
+          <div id="wishlist-edit-area">
+            <button id="wishlist-edit-button" class="wishlist-select-button">
               편집
             </button>
-            <div class="wishlist-edit-inner">
+            <div id="wishlist-edit-inner">
               <div class="wishlist-select-list">
-                <button type="button">전체선택</button>
-                <button type="button">삭제(0)</button>
+                <button id="select-all-button">전체선택</button>
+                <button id="wishlist-delete-button">삭제(0)</button>
               </div>
               <button
-                type="button"
                 id="wishlist-complete-button"
                 class="wishlist-select-button"
               >
