refactor: 찜이 없을 경우 표시

--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -58,6 +58,12 @@
         <ul id="wishlist">
           <!-- 찜한 영화 리스트 -->
         </ul>
+        <div id="emptyWishlist">
+          <div class="emptyWishlist-icon">
+            <i class="fa-solid fa-exclamation"></i>
+          </div>
+          <p id="emptyWishlist-content">찜한 영화가 없습니다.</p>
+        </div>
       </section>
     </div>
 
