feat: footer 추가

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h4>NINE MOIVE</h4>
+      <h4>NINE MOVIE</h4>
       <nav>
         <ul>
           <li><a href="#">시리즈</a></li>
@@ -53,13 +53,40 @@
       </section>
       <section class="similar-movies">
         <h2>관련 콘텐츠</h2>
-        <span id="left-arrow-popular" class="arrow-left">&lt;</span>
         <div id="similarMovies">
           <!-- 관련 콘텐츠 -->
-          <span id="right-arrow-popular" class="arrow-right">&gt;</span>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-top">
+        <a href="#">고객센터</a>
+        <a href="#">이용약관</a>
+        <a href="#">개인정보처리방침</a>
+        <a href="#">청소년 보호정책</a>
+        <a href="#">법적고지</a>
+        <a href="#">이벤트</a>
+        <a href="#">인재채용</a>
+        <a href="#">브랜드 바로가기</a>
+        <a href="#">그룹 계열사 바로가기</a>
+      </div>
+      <div class="footer-middle">
+        <p>
+          고객센터 (평일 09시 ~ 17시/점심시간 13시 ~ 14시) | 1:1 게시판 문의 |
+          대표메일:nuna@jc.net | 전화번호:1111-1111<br />
+          NINEMOVIE 시청자 상담실(편성 문의 및 시청자 의견):123-123-1234 |
+          ninenet 고객센터(방송편성문의):3333-3333
+        </p>
+      </div>
+      <div class="footer-bottom">
+        <div class="social-icons">
+          <a href="#"><img src="../img/instagram.png" alt="Instagram" /></a>
+          <a href="#"><img src="../img/youtube.png" alt="YouTube" /></a>
+          <a href="#"><img src="../img/twitter.png" alt="Twitter" /></a>
+        </div>
+        <p>© 주식회사 누나 All rights reserved</p>
+      </div>
+    </footer>
     <script src="detail.js"></script>
   </body>
 </html>
