fix: footer수정 및 슬라이드 수정

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -45,16 +45,20 @@
         </div>
       </section>
 
+      <section class="similar-movies">
+        <h2>관련 콘텐츠</h2>
+        <div class="slider-container">
+          <button class="arrow-left" onclick="slideLeft()">&#10094;</button>
+          <div class="slider" id="similarMovies">
+            <!-- 관련 콘텐츠 -->
+          </div>
+          <button class="arrow-right" onclick="slideRight()">&#10095;</button>
+        </div>
+      </section>
       <section class="videos">
         <h2>관련 영상</h2>
         <div id="videoResults">
           <!-- 유튜브 비디오 -->
-        </div>
-      </section>
-      <section class="similar-movies">
-        <h2>관련 콘텐츠</h2>
-        <div id="similarMovies">
-          <!-- 관련 콘텐츠 -->
         </div>
       </section>
     </main>
