--- a/detail/detail.html
+++ b/detail/detail.html
@@ -7,17 +7,49 @@
     <link rel="stylesheet" href="detail.css" />
   </head>
   <body>
-    <header>
-      <h4>NINE MOVIE</h4>
-      <nav>
-        <ul>
-          <li><a href="#">시리즈</a></li>
-          <li><a href="#">영화</a></li>
-          <li><a href="#">라이브</a></li>
-          <li><a href="#">KBO</a></li>
-        </ul>
+    <section class="header">
+      <nav class="navbar">
+        <a href="/index.html" class="logo"> NINE MOVIE </a>
+        <div class="menus"></div>
+        <div class="navbar_right">
+          <button
+            class="fas fa-search icon-button search-icon"
+            onclick="openNav()"
+          ></button>
+          <button
+            class="fa fa-heart icon-button favorite-icon"
+            onclick="favoriteIcon()"
+          ></button>
+        </div>
       </nav>
-    </header>
+      <!-- Search Input 검색 기능 -->
+      <div class="top-menu" id="topnav">
+        <div class="search-box">
+          <div class="inner">
+            <div class="inner-search">
+              <input
+                type="text"
+                id="search-input"
+                placeholder="제목, 인물명을 입력하세요"
+              />
+              <button
+                onclick="getMoviesByKeyword()"
+                class="fas fa-search icon-button search-open-icon"
+                id="myBtn"
+              ></button>
+            </div>
+            <button class="closeBtn" onclick="closeNav()">&times;</button>
+          </div>
+          <!-- Search 내부의 영화리스트 슬라이더 기능 -->
+          <div
+            id="movie-search-board"
+            class="swiper-container movies-container"
+          >
+            <div class="swiper-wrapper"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <main>
       <section class="content">
         <div class="left">
@@ -48,11 +80,11 @@
       <section class="similar-movies">
         <h2>관련 콘텐츠</h2>
         <div class="slider-container">
-          <button class="arrow-left" onclick="slideLeft()">&#10094;</button>
+          <!-- <button class="arrow-left" onclick="slideLeft()">&#10094;</button> -->
           <div class="slider" id="similarMovies">
             <!-- 관련 콘텐츠 -->
           </div>
-          <button class="arrow-right" onclick="slideRight()">&#10095;</button>
+          <!-- <button class="arrow-right" onclick="slideRight()">&#10095;</button> -->
         </div>
       </section>
       <section class="videos">
