--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
     </div>
   </section>
   <!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
     defer></script>
   <script src="./search/search.js" defer></script>
-  <script src="recommendation/recommendation.js" defer></script>
+  <script src="./recommendation/recommendation.js" defer></script>
 </body>
 
 </html>
