--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             class="fas fa-search icon-button search-icon"
             onclick="openNav()"
           ></button>
-          <button
-            class="fa fa-heart icon-button favorite-icon"
-            onclick="favoriteIcon()"
-          ></button>
+          <a href="/wishlist/wishlist.html">
+            <button
+              class="fa fa-heart icon-button favorite-icon"
+              onclick="favoriteIcon()"
+            ></button
+          ></a>
         </div>
       </nav>
       <!-- Search Input 검색 기능 -->
