feat: 상세페이지에 찜하기 기능 연동

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NINE MOVIE</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="detail.css" />
   </head>
   <body>
@@ -62,7 +69,7 @@
             <span class="category" id="movieCategory">장르</span>
             <span class="category" id="movieRuntime">런닝타임</span>
           </div>
-          <div>
+          <div class="detail-button">
             <button class="watch-button">시청하기</button>
             <div id="like-button-area">
               <!-- 찜 버튼 -->
