feat: navbar 로고연동 및 관련콘텐츠 클릭시 페이지이동

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NINE MOVIE</title>
     <link rel="stylesheet" href="detail.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <section class="header">
       <nav class="navbar">
         <a href="/index.html" class="logo"> NINE MOVIE </a>
-        <div class="menus"></div>
+        <div class="menus">
+          <button>영화</button>
+          <button>인기</button>
+          <button>최신</button>
+        </div>
         <div class="navbar_right">
           <button
             class="fas fa-search icon-button search-icon"
