feat: navbar 검색연동

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="detail.css" />
+    <link rel="stylesheet" href="../search/search.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -149,6 +150,7 @@
         <p>© 주식회사 누나 All rights reserved</p>
       </div>
     </footer>
+    <script src="../search/search.js" defer></script>
     <script src="detail.js"></script>
   </body>
 </html>
