feat: 헤터, 푸터 연동

--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -12,24 +12,74 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="/globalStyle.css" />
+    <link rel="stylesheet" href="/search/search.css" />
+    <link rel="stylesheet" href="/wishlist/footer.css" />
     <link rel="stylesheet" href="/wishlist/wishlist.css" />
   </head>
   <body>
+    <section class="header">
+      <nav class="navbar">
+        <a href="/index.html" class="logo"> NINE MOVIE </a>
+
+        <div class="navbar_right">
+          <button
+            class="fas fa-search icon-button search-icon"
+            onclick="openNav()"
+          ></button>
+          <a href="/wishlist/wishlist.html">
+            <button
+              class="fa fa-heart icon-button favorite-icon"
+              onclick="favoriteIcon()"
+            ></button>
+          </a>
+        </div>
+      </nav>
+      <!-- Search Input 검색 기능 -->
+      <div class="top-menu" id="topnav">
+        <div class="search-box">
+          <div class="inner">
+            <div class="inner-search">
+              <input
+                type="text"
+                id="search-input"
+                placeholder="제목, 인물명을 입력하세요"
+              />
+              <button
+                onclick="getMoviesByKeyword()"
+                class="fas fa-search icon-button search-open-icon"
+                id="myBtn"
+              ></button>
+            </div>
+            <button class="closeBtn" onclick="closeNav()">&times;</button>
+          </div>
+          <!-- Search 내부의 영화리스트 슬라이더 기능 -->
+          <div
+            id="movie-search-board"
+            class="swiper-container movies-container"
+          >
+            <div class="swiper-wrapper"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- 찜 목록 페이지 -->
     <div class="container">
-      <!-- TODO: 헤더 -->
-      <a class="wishlist-button" href="/wishlist/wishlist.html">
-        <i class="fa-regular fa-heart default-heart"></i>
-        <i class="fa-solid fa-heart hover-heart"></i>
-      </a>
       <section class="wishlist-area">
-        <h1 class="h1">찜 목록</h1>
+        <h3 class="h1">찜 목록</h3>
         <!-- 카테고리 선택, 편집 버튼 -->
         <div class="wishlist-select-area">
           <div id="wishlist-category" class="wishlist-select-list">
@@ -66,12 +116,42 @@
         </div>
       </section>
     </div>
+    <footer>
+      <div class="footer-top">
+        <a href="#">고객센터</a>
+        <a href="#">이용약관</a>
+        <a href="#">개인정보처리방침</a>
+        <a href="#">청소년 보호정책</a>
+        <a href="#">법적고지</a>
+        <a href="#">이벤트</a>
+        <a href="#">인재채용</a>
+        <a href="#">브랜드 바로가기</a>
+        <a href="#">그룹 계열사 바로가기</a>
+      </div>
+      <div class="footer-middle">
+        <p>
+          고객센터 (평일 09시 ~ 17시/점심시간 13시 ~ 14시) | 1:1 게시판 문의 |
+          대표메일:nuna@jc.net | 전화번호:1111-1111<br />
+          NINEMOVIE 시청자 상담실(편성 문의 및 시청자 의견):123-123-1234 |
+          ninenet 고객센터(방송편성문의):3333-3333
+        </p>
+      </div>
+      <div class="footer-bottom">
+        <div class="social-icons">
+          <a href="#"><img src="../img/instagram.png" alt="Instagram" /></a>
+          <a href="#"><img src="../img/youtube.png" alt="YouTube" /></a>
+          <a href="#"><img src="../img/twitter.png" alt="Twitter" /></a>
+        </div>
+        <p>© 주식회사 누나 All rights reserved</p>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="../search/search.js" defer></script>
     <script src="/wishlist/wishlist.js"></script>
   </body>
 </html>
