--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
       crossorigin="anonymous"
     />
     <!-- Swiper -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
     <!-- icon -->
     <link
       rel="stylesheet"
@@ -29,12 +27,11 @@
     <link rel="stylesheet" href="recommendation/slide-feature.css" />
     <title>NINE MOVIE</title>
   </head>
+
   <body>
     <section class="header">
       <nav class="navbar">
-        <a href="./" class="logo">
-          NINE MOVIE
-        </a>
+        <a href="index.html" class="logo"> NINE MOVIE </a>
         <div class="menus">
           <button>영화</button>
           <button>인기</button>
@@ -45,10 +42,12 @@
             class="fas fa-search icon-button search-icon"
             onclick="openNav()"
           ></button>
-          <button
-            class="fa fa-heart icon-button favorite-icon"
-            onclick="favoriteIcon()"
-          ></button>
+          <a href="/wishlist/wishlist.html">
+            <button
+              class="fa fa-heart icon-button favorite-icon"
+              onclick="favoriteIcon()"
+            ></button
+          ></a>
         </div>
       </nav>
       <!-- Search Input 검색 기능 -->
@@ -63,28 +62,34 @@
               />
               <button
                 onclick="getMoviesByKeyword()"
-                class="fas fa-search icon-button search-open-icon" id="myBtn"
+                class="fas fa-search icon-button search-open-icon"
+                id="myBtn"
               ></button>
             </div>
             <button class="closeBtn" onclick="closeNav()">&times;</button>
           </div>
+          <!-- 20240720 수정 -->
           <!-- Search 내부의 영화리스트 슬라이더 기능 -->
-          <div
-            id="movie-search-board"
-            class="swiper-container movies-container"
-          >
-            <div class="swiper-wrapper"></div>
+          <div id="movie-search-board" class="swiper-container movies-container">
+            <div class="swiper-wrapper">
+            </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- 20240720 수정 -->
     <main>
-      <div id="initial-movie-board" class="movie-container"></div>
+      <div id="initial-movie-board" class="movie-container container">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col"></div>
+        </div>
+      </div>
     </main>
 
     <!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
     <section id="second-section">
-      <section id="popular-img">
+      <div id="popular-img-carousel" class="carousel-window">
         <div
           id="carouselExampleAutoplaying"
           class="carousel slide"
@@ -97,8 +102,8 @@
             <!-- 여기서 JavaScript를 통해 동적으로 이미지가 추가될 것입니다. -->
           </div>
         </div>
-      </section>
-      <section>
+      </div>
+      <div class="card-castom">
         <!--  card 커스텀 슬라이더 기능 구현하기 구역 -->
         <div class="container movie-list-container">
           <div>
@@ -131,9 +136,31 @@
               <span id="right-arrow-trending" class="arrow-right">&gt;</span>
             </div>
           </div>
+
+          <div>
+            <h1 class="movie-list-title">개봉예정 영화</h1>
+            <div class="movie-list-wrapper">
+              <span id="left-arrow-upcoming" class="arrow-left">&lt;</span>
+              <div class="upcoming-movie-list">
+                <!-- card 커스텀 JavaScript을 통해 동적으로 이미지 및 슬라이드 실행 영역 -->
+              </div>
+              <span id="right-arrow-upcoming" class="arrow-right">&gt;</span>
+            </div>
+          </div>
+
+          <div>
+            <h1 class="movie-list-title">높은평점 영화</h1>
+            <div class="movie-list-wrapper">
+              <span id="left-arrow-topRated" class="arrow-left">&lt;</span>
+              <div class="topRated-movie-list">
+                <!-- card 커스텀 JavaScript을 통해 동적으로 이미지 및 슬라이드 실행 영역 -->
+              </div>
+              <span id="right-arrow-topRated" class="arrow-right">&gt;</span>
+            </div>
+          </div>
         </div>
-      </section>
-    </section>  
+      </div>
+    </section>
     <!-- End of 슬라이드쇼 및 추천 콘텐츠 기능 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -143,5 +170,39 @@
     ></script>
     <script src="./search/search.js" defer></script>
     <script src="recommendation/recommendation.js" defer></script>
+    <script>
+      function navigateToDetail(movieId) {
+        window.location.href = `/detail/detail.html?id=${movieId}`;
+      }
+    </script>
   </body>
+  <footer>
+    <div class="footer-top">
+      <a href="#">고객센터</a>
+      <a href="#">이용약관</a>
+      <a href="#">개인정보처리방침</a>
+      <a href="#">청소년 보호정책</a>
+      <a href="#">법적고지</a>
+      <a href="#">이벤트</a>
+      <a href="#">인재채용</a>
+      <a href="#">브랜드 바로가기</a>
+      <a href="#">그룹 계열사 바로가기</a>
+    </div>
+    <div class="footer-middle">
+      <p>
+        고객센터 (평일 09시 ~ 17시/점심시간 13시 ~ 14시) | 1:1 게시판 문의 |
+        대표메일:nuna@jc.net | 전화번호:1111-1111<br />
+        NINEMOVIE 시청자 상담실(편성 문의 및 시청자 의견):123-123-1234 | ninenet
+        고객센터(방송편성문의):3333-3333
+      </p>
+    </div>
+    <div class="footer-bottom">
+      <div class="social-icons">
+        <a href="#"><img src="../img/instagram.png" alt="Instagram" /></a>
+        <a href="#"><img src="../img/youtube.png" alt="YouTube" /></a>
+        <a href="#"><img src="../img/twitter.png" alt="Twitter" /></a>
+      </div>
+      <p>© 주식회사 누나 All rights reserved</p>
+    </div>
+  </footer>
 </html>
