07-20-2024 at 5:13 pm commit

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <!-- 슬라이드쇼 및 추천 콘텐츠 기능 -->
   <section id="second-section">
-    <div id="popular-img-carousel" class="carousel-window container">
+    <div id="popular-img-carousel" class="carousel-window">
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <!-- JavaScript에서 인디케이터가 여기에 추가될 것입니다. -->
@@ -149,7 +149,7 @@
   </section>
   
 
-  <footer>
+  <footer class="container">
     <div class="footer-top">
       <a href="#">고객센터</a>
       <a href="#">이용약관</a>
