design: 공통 스타일 적용 및 메인 헤더 레이아웃 조정
- 공통 스타일 적용(폰트, 스타일 초기화)
- 공통 스타일 적용으로 인해 메인페이지  헤더 안 요소 간격이 안맞아서 조정

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/globalStyle.css" />
     <link rel="stylesheet" href="detail.css" />
     <link rel="stylesheet" href="../search/search.css" />
     <link
