--- a/detail/detail.html
+++ b/detail/detail.html
@@ -107,12 +107,12 @@
 
       <section class="similar-movies">
         <h2>관련 콘텐츠</h2>
-        <div class="slider-container">
-          <button class="arrow-left" onclick="slideLeft()">&#10094;</button>
-          <div class="slider" id="similarMovies">
+        <div class="movie-list-wrapper">
+          <span id="left-arrow-similar" class="arrow-left">&lt;</span>
+          <div class="similar-movie-list" id="similarMovies">
             <!-- 관련 콘텐츠 -->
           </div>
-          <button class="arrow-right" onclick="slideRight()">&#10095;</button>
+          <span id="right-arrow-similar" class="arrow-right">&gt;</span>
         </div>
       </section>
       <section class="videos">
