--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
   <!-- icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -63,8 +62,12 @@
         <!-- Search 내부의 영화리스트 슬라이더 기능 -->
         <div id="movie-search-board" class="swiper-container movies-container">
           <div class="swiper-wrapper">
+            <!-- 영화 리스트 -->
           </div>
-        </div>
+          <!-- 슬라이드를 nav-->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>   
       </div>
     </section>
     <!-- 20240720 수정 -->
@@ -185,12 +188,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
     defer></script>
+  <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="./search/search.js" defer></script>
   <script src="./recommendation/recommendation.js" defer></script>
   <script>
     function navigateToDetail(movieId) {
       window.location.href = `/detail/detail.html?id=${movieId}`;
-    }
+    }  
   </script>
 </body>
 </html>
