--- a/detail/detail.html
+++ b/detail/detail.html
@@ -21,6 +21,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
   <body>
     <section class="header">
@@ -107,12 +112,14 @@
 
       <section class="similar-movies">
         <h2>관련 콘텐츠</h2>
-        <div class="slider-container">
-          <button class="arrow-left" onclick="slideLeft()">&#10094;</button>
-          <div class="slider" id="similarMovies">
-            <!-- 관련 콘텐츠 -->
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide" id="similarMovies">
+              <!-- 관련 콘텐츠 -->
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
-          <button class="arrow-right" onclick="slideRight()">&#10095;</button>
         </div>
       </section>
       <section class="videos">
