feat: 관련 콘텐츠 슬라이드 추가

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -113,13 +113,11 @@
       <section class="similar-movies">
         <h2>관련 콘텐츠</h2>
         <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide" id="similarMovies">
-              <!-- 관련 콘텐츠 -->
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+          <div class="swiper-wrapper" id="similarMovies">
+            <!-- 영화 리스트 자리 -->
           </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
       </section>
       <section class="videos">
