fix: globalstyle.css link추가

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="detail.css" />
     <link rel="stylesheet" href="../search/search.css" />
+    <link rel="stylesheet" href="../globalStyle.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
