--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="./search/search.css" />
   <link rel="stylesheet" href="./recommendation/slide-feature.css" />
+  <link rel="stylesheet" href="./globalStyle.css"/>
   <title>NINE MOVIE</title>
 </head>
 
